<resources>
    <string name="app_name">股票数据</string>
    <string name="no_data">没有数据，请稍后再试</string>
    <string name="confirm">确认</string>
    <string name="save">保存</string>
    <string name="select_all">全选</string>
    <string name="cancel_select_all">取消全选</string>
    <string name="track_follow_title">追踪</string>
    <string name="power">电源</string>
    <string name="speed_limit">限速</string>
    <string name="expiry_date">有效期</string>
    <string name="expiry_no_date">长期有效</string>
    <string name="my_location">我的位置</string>
    <string name="second">秒</string>
    <string name="begin_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="please_select_time">请选择时间</string>
    <string name="type_all">全部</string>
    <string name="type_online">在线</string>
    <string name="type_offline">离线</string>
    <string name="type_other">其它</string>
    <string name="result_no_data">暂无数据</string>
    <string name="add_success">添加成功</string>

    <string name="data_upload_sim">2G/3G/4G上报</string>
    <string name="data_upload_nb">NB-IOT上报</string>
    <string name="data_upload_moon">北斗卫星上报</string>

    <string name="apply_to_1">电动三轮车</string>
    <string name="apply_to_2">电动两轮车/摩托车</string>
    <string name="apply_to_3">轿车</string>
    <string name="apply_to_4">客车</string>
    <string name="apply_to_5">货车</string>
    <string name="apply_to_6">工程车</string>
    <string name="apply_to_11">货物</string>
    <string name="apply_to_12">罐箱</string>
    <string name="apply_to_13">集装箱</string>
    <string name="apply_to_21">电池</string>
    <string name="apply_to_22">设备</string>
    <string name="apply_to_23">无人机</string>
    <string name="apply_to_31">人员</string>
    <string name="apply_to_32">动物</string>
    <string name="apply_to_99">其它</string>

    <!-- 1-正常使用，2-即将到期，3-已到期 -->
    <string name="service_normal">正常使用</string>
    <string name="service_due_soon">即将到期</string>
    <string name="service_was_due">已到期</string>

    <!-- 首页 -->
    <string name="home_tab_location">定位</string>
    <string name="home_tab_list">列表</string>
    <string name="home_tab_msg">消息</string>
    <string name="home_tab_mine">我的</string>

    <!-- 我的 -->
    <string name="mine_setting">设置</string>
    <string name="mine_question">常见问题</string>
    <string name="mine_log_directive">指令日志</string>
    <string name="mine_rail_manager">围栏管理</string>
    <string name="mine_my_service_provider">我的服务商</string>

    <!-- 设置 -->
    <string name="set_title">设置</string>
    <string name="set_msg_set">消息设置</string>
    <string name="set_clear_data">清空缓存</string>
    <string name="set_about_us">关于我们</string>
    <string name="set_app_share">APP分享</string>

    <!-- 登录 -->
    <string name="login_btn">登录</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_account_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_check_err">请输入用户名或密码</string>

    <!-- 告警信息 -->
    <string name="alarm_list_title">告警信息</string>
    <string name="alarm_list_type">报警类型:%s</string>

    <!-- 个人页面 -->
    <string name="personal_title">个人资料</string>
    <string name="personal_account">账号</string>
    <string name="personal_nick">昵称</string>
    <string name="personal_phone">电话</string>
    <string name="personal_email">邮箱</string>
    <string name="personal_modify_password">修改密码</string>
    <string name="personal_logout">退出登录</string>

    <string name="operation_title">更多操作</string>
    <string name="operation_track">追踪</string>
    <string name="operation_path">轨迹</string>
    <string name="operation_command">指令</string>
    <string name="operation_fence">围栏</string>
    <string name="operation_alarm">告警</string>
    <string name="operation_navi">导航</string>
    <string name="operation_detail">详情</string>
    <string name="operation_console">控制台</string>
    <string name="operation_route_share">行程分享</string>

    <string name="fence_title">围栏</string>
    <string name="fence_alarm_set">进出口告警设置</string>
    <string name="fence_in">进</string>
    <string name="fence_out">出</string>
    
    <string name="directive_send">发送指令</string>
    <string name="directive_type">指令类型</string>
    <string name="directive_valid_time">有效时间</string>
    <string name="directive_notes">注：</string>
    <string name="directive_note1">(1) 若超过有效时间，未下发的指令自动取消</string>
    <string name="directive_note2">(2) 默认有效期为24小时，也可自行编辑</string>

    <!-- 控制台 -->
    <string name="console_car_state">当前状态:%s</string>
    <string name="console_offline">离线</string>
    <string name="console_set_safe">设防</string>
    <string name="console_clear_safe">撤防</string>
    <string name="console_blackout">断油电</string>

    <!-- 修改 -->
    <string name="modified_title_nickname">修改客户名称</string>
    <string name="modified_title_phone">修改客户电话</string>
    <string name="modified_title_emil">修改客户邮箱</string>
    <string name="modified_title_password">修改密码</string>
    <string name="modified_nickname">昵称</string>
    <string name="modified_phone">电话</string>
    <string name="modified_email">邮箱</string>
    <string name="modified_hint_nickname">请输入昵称，长度在3～50位之间</string>
    <string name="modified_hint_phone">请输入手机号</string>
    <string name="modified_hint_email">请输入正确的邮箱地址</string>
    <string name="modified_password_old">旧密码</string>
    <string name="modified_password_new">新密码</string>
    <string name="modified_password_confirm">确认密码</string>
    <string name="modified_hint_password_old">请输入旧密码</string>
    <string name="modified_hint_password_new">请输入新密码</string>
    <string name="modified_hint_password_confirm">请再次输入密码</string>
    <string name="modified_err_remind_first">请设置包含数字和字母的密码！</string>
    <string name="modified_err_remind_password_diff">两次密码不一致！</string>
    <string name="modified_err_remind_password_empty">密码不能为空！</string>
    <string name="modified_err_nickname">用户名称长度至少3位，不超过50位</string>
    <string name="modified_err_phone">请输入正确的手机号</string>
    <string name="modified_err_email">请输入正确的邮箱格式</string>

    <!-- 搜索界面 -->
    <string name="search_title">搜索</string>
    <string name="search_title_hint">请输入设备编号后五位或设备名称</string>
    <string name="search_clear_history">清空历史记录</string>

    <!-- 添加设备 -->
    <string name="add_device_title">添加设备</string>

    <!-- 我的服务商 -->
    <string name="my_sp_name">服务商:</string>
    <string name="my_sp_contact">联系人:</string>
    <string name="my_sp_phone">联系电话:</string>

    <!-- 设备详情 -->
    <string name="device_info_title">设备详情</string>
    <string name="device_info_name">设备名称</string>
    <string name="device_info_type">设备型号</string>
    <string name="device_info_imei">设备编号</string>
    <string name="device_info_state">设备状态</string>
    <string name="device_info_data_upload_type">数据上报方式</string>
    <string name="device_info_sim_exp_time">卡到期时间</string>
    <string name="device_info_iccid">ICCID</string>
    <string name="device_info_imsi">IMSI</string>
    <string name="device_info_engine">发动机</string>
    <string name="device_info_install_pos">安装位置</string>
    <string name="device_info_total_dist">总里程</string>
    <string name="device_info_loc_time">定位时间</string>
    <string name="device_info_loc_type">定位模式</string>
    <string name="device_info_msg_time">通讯时间</string>
    <string name="device_info_speed">时速</string>
    <string name="device_info_lng">经度</string>
    <string name="device_info_lat">纬度</string>
    <string name="device_info_addr">地址</string>
    <string name="device_info_exp_time">到期时间</string>
    <string name="device_info_service_state">平台服务状态</string>
    <string name="device_info_activate_time">终端激活时间</string>
    <string name="device_info_license_num">车牌号</string>
    <string name="device_info_driver_name">司机名称</string>
    <string name="device_info_contact_phone">联系电话</string>
    <string name="device_info_car_color">车辆颜色</string>
    <string name="device_info_remark">备注</string>
    <string name="device_info_bat">内置电池电压</string>
    <string name="device_info_out_bat">外部电源电池电压</string>
    <string name="device_info_sim">SIM卡号</string>
    <string name="device_info_sim_end_time">SIM到期时间</string>
    <string name="device_info_object_type">应用对象类型</string>
    <string name="device_info_object_num">应用对象编号</string>
    <string name="device_info_user_name">所属单位</string>
    <string name="device_info_dept_name">所属部门</string>

    <!-- 围栏管理 -->
    <string name="fence_manager_title">围栏管理</string>
    <string name="fence_manager_edit">编辑围栏</string>
    <string name="fence_manager_add_device">添加设备</string>
    <string name="fence_manager_delete">删除围栏</string>

    <!-- 添加围栏 -->
    <string name="fence_add_clear">清除</string>
    <string name="fence_add_device">[添加设备]</string>
    <string name="fence_add_edit_name">[编辑名称]</string>
    <string name="fence_add_alarm_set">进出告警设置</string>
    <string name="fence_add_in">进</string>
    <string name="fence_add_out">出</string>
    <string name="fence_add_more">[更多]</string>
    <string name="fence_add_save">保存</string>
    <string name="fence_add_title">添加围栏</string>
    <string name="fence_add_input_name_hint">请输入围栏名称</string>
    <string name="fence_add_input_name_error">围栏名称不能为空</string>
    <string name="fence_add_device_id_error">请选择设备</string>
    <string name="fence_add_points_error">请绘制围栏</string>
    <string name="fence_add_points_max_error">最多20个坐标点</string>

    <!-- 围栏属性设置 -->
    <string name="fence_property_set_title">围栏属性设置</string>
    <string name="fence_property_set_fence_name">围栏名称</string>
    <string name="fence_property_set_alarm_set">进出告警</string>
    <string name="fence_property_set_alarm_speed">超速告警</string>
    <string name="fence_property_set_alarm_speed_val">超速告警阈值</string>
    <string name="fence_property_set_speed">公里/小时</string>
    <string name="fence_property_set_speed_time">超速持续时间</string>
    <string name="fence_property_set_valid_time">有效时间段</string>
    <string name="fence_property_set_device_list">设备列表</string>

    <!-- 追踪页面 -->
    <string name="track_follow_speed">时速: %skm/h</string>
    <string name="track_follow_gnssSatNum">卫星定位: %s</string>
    <string name="track_follow_gnssSatTime">定位时间: %s</string>
    <string name="track_follow_lat">纬度: %s</string>
    <string name="track_follow_lng">经度: %s</string>

    <!-- 设备状态 0-离线，1-停车/静止，2-行驶/移动，3-失联，4-报警 -->
    <string name="drive_offline">离线</string>
    <string name="drive_stop">停车</string>
    <string name="drive_driving">行驶</string>
    <string name="drive_loss">失联</string>
    <string name="drive_alarm">报警</string>

    <!-- 定位方式：0-Null未定位，1-GNSS卫星定位，2-LBS基站定位，3-Wifi定位，4-Other其它定位 -->
    <string name="loc_mode_null">未定位</string>
    <string name="loc_mode_gnss">卫星定位</string>
    <string name="loc_mode_lbs">基站定位</string>
    <string name="loc_mode_wifi">Wifi定位</string>
    <string name="loc_mode_other">其它定位</string>

    <!-- 0：断电 1：接通 2：未知 -->
    <string name="power_off">断电</string>
    <string name="power_in">接通</string>
    <string name="power_unknown">未知</string>

    <!-- circle——圆,polygon——多边形 -->
    <string name="circle">圆</string>
    <string name="polygon">多边形</string>

</resources>
