<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/include_title_layout" />

    <LinearLayout
        android:id="@+id/fence_property_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iot_title"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/fence_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fence_property_set_fence_name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/fence_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/bg_light_gray_edit_1px"
                android:padding="2dp"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/fence_inout_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fence_property_set_alarm_set"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/fence_in_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/fence_in_img"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/device_application_item_in_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/fence_in_img"
                    android:text="@string/fence_in" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/fence_out_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp">

                <ImageView
                    android:id="@+id/fence_out_img"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/device_application_item_in_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/fence_out_img"
                    android:text="@string/fence_out" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fence_property_set_alarm_speed"
                android:textSize="16sp" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/speed_switch"
                style="@style/SwitchButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:kswBackColor="@color/light_bLue"
                app:kswThumbColor="@color/white"
                app:kswThumbHeight="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fence_property_set_alarm_speed_val"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/speed_val_edit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/bg_light_gray_edit_1px"
                android:gravity="right"
                android:inputType="number"
                android:padding="2dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fence_property_set_speed"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fence_property_set_speed_time"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/speed_time_edit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/bg_light_gray_edit_1px"
                android:gravity="right"
                android:inputType="number"
                android:padding="2dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/fence_property_set_valid_time"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/begin_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/begin_time"
                android:textColor="@color/light_gray" />

            <TextView
                android:id="@+id/select_begin_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/begin_time"
                android:layout_alignLeft="@+id/begin_time"
                android:paddingBottom="5dp"
                android:text="@string/please_select_time" />

            <TextView
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="80dp"
                android:text="@string/end_time"
                android:textColor="@color/light_gray" />

            <TextView
                android:id="@+id/select_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/end_time"
                android:layout_alignLeft="@+id/end_time"
                android:paddingBottom="5dp"
                android:text="@string/please_select_time" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:background="@color/light_gray" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/add_device_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fence_property_layout"
        android:layout_marginBottom="50dp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/add_device_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_device_select_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/select_all"
            android:textColor="@color/light_bLue" />

        <View
            android:id="@+id/add_device_bottom_line"
            android:layout_width="1px"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/add_device_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/light_bLue" />
    </LinearLayout>
</RelativeLayout>