<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app">

    <include layout="@layout/include_title_layout" />

    <FrameLayout
        android:id="@+id/add_device_search_layout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/iot_title"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:background="@drawable/bg_white_radius_20dp">

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:src="@drawable/common_search_bar_icon" />

        <EditText
            android:id="@+id/search_edit"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/search_title_hint"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="#dcdcdc"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_light_gray_radius_2dp"
            android:paddingLeft="8dp"
            android:paddingTop="3dp"
            android:paddingRight="8dp"
            android:paddingBottom="3dp"
            android:text="@string/search_title"
            android:visibility="gone" />
    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/add_device_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_device_search_layout"
        android:layout_marginBottom="50dp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/add_device_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_device_select_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/select_all"
            android:textColor="@color/light_bLue" />

        <View
            android:id="@+id/add_device_bottom_line"
            android:layout_width="1px"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/add_device_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/light_bLue" />
    </LinearLayout>

    <TextView
        android:id="@+id/add_device_result_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/result_no_data"
        android:textColor="@color/dark_gray"
        android:textSize="16sp"
        android:visibility="gone" />

</RelativeLayout>