<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_title_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/fence_add_bottom">

            <com.iot.automatic.modue.mapview.view.IOTMapView
                android:id="@+id/fence_add_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/fence_add_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/center_cross_b" />

            <TextView
                android:id="@+id/fence_add_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/light_gray"
                android:padding="8dp"
                android:visibility="gone"
                android:text="@string/fence_add_clear"
                android:textColor="@color/white" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/fence_add_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fence_add_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxWidth="210dp"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/fence_add_edit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@+id/fence_add_name"
                    android:text="@string/fence_add_edit_name"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/fence_add_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@+id/fence_add_edit_name"
                    android:text="@string/fence_add_device"
                    android:textColor="@color/red" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fence_add_alarm_set" />

                <RelativeLayout
                    android:id="@+id/fence_add_in_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/fence_add_in"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/device_application_item_in_pressed" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="6dp"
                        android:layout_toRightOf="@+id/fence_add_in"
                        android:text="@string/fence_add_in" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/fence_add_out_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp">

                    <ImageView
                        android:id="@+id/fence_add_out"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/device_application_item_in_pressed" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="6dp"
                        android:layout_toRightOf="@+id/fence_add_out"
                        android:text="@string/fence_add_out" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/fence_add_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="16dp"
                    android:text="@string/fence_add_more"
                    android:textColor="@color/red" />
            </LinearLayout>

            <TextView
                android:id="@+id/fence_add_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_fence_add_save"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/fence_add_save"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>